Add video backgrounds to slides and update tire sales representative job description

--- a/index.html
+++ b/index.html
@@ -321,6 +321,108 @@
 							data-dots
 						></div>
 					</div>
+
+					<!-- SLIDE 1 — VIDEO -->
+					<div class="stage text-white">
+						<!-- Video de fondo -->
+						<video
+							class="absolute inset-0 w-full h-full object-cover z-[0]"
+							autoplay
+							muted
+							loop
+							playsinline
+							preload="none"
+							data-video
+						>
+							<source
+								src="assets/img/SUV_en_Montañas_Nevadas_Estilo_Documental.mp4"
+								type="video/mp4"
+							/>
+							<!-- <source src="videos/slide1.webm" type="video/webm"> -->
+						</video>
+
+						<!-- Título -->
+						<div class="relative z-10 h-full max-w-7xl mx-auto">
+							<div
+								class="h-full px-6 flex items-center justify-center text-center"
+							>
+								<!-- LOCKUP DE POSICIONAMIENTO -->
+								<div
+									class="relative z-20 h-full flex items-center justify-center text-center px-6"
+								>
+									<div class="slogan-lockup select-none">
+										<div class="font-extrabold tracking-tight leading-none">
+											<!-- Logo en lugar de "Landscape" -->
+											<img
+												src="assets/img/landscape-complete-purple.webp"
+												alt="Landscape"
+												class="mx-auto lg:h-60 w-auto drop-shadow"
+												loading="eager"
+												decoding="async"
+											/>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<!-- Dots -->
+						<div
+							class="absolute bottom-6 left-1/2 -translate-x-1/2 flex gap-3 z-20"
+							data-dots
+						></div>
+					</div>
+
+					<!-- SLIDE 1 — VIDEO -->
+					<div class="stage text-white">
+						<!-- Video de fondo -->
+						<video
+							class="absolute inset-0 w-full h-full object-cover z-[0]"
+							autoplay
+							muted
+							loop
+							playsinline
+							preload="none"
+							data-video
+						>
+							<source
+								src="assets/img/Vídeo_Promocional_Todoterreno_Estilo_Halftone.mp4"
+								type="video/mp4"
+							/>
+							<!-- <source src="videos/slide1.webm" type="video/webm"> -->
+						</video>
+
+						<!-- Título -->
+						<div class="relative z-10 h-full max-w-7xl mx-auto">
+							<div
+								class="h-full px-6 flex items-center justify-center text-center"
+							>
+								<!-- LOCKUP DE POSICIONAMIENTO -->
+								<div
+									class="relative z-20 h-full flex items-center justify-center text-center px-6"
+								>
+									<div class="slogan-lockup select-none">
+										<div class="font-extrabold tracking-tight leading-none">
+											<!-- Logo en lugar de "Landscape" -->
+											<img
+												src="assets/img/landscape-complete-purple.webp"
+												alt="Landscape"
+												class="mx-auto lg:h-60 w-auto drop-shadow"
+												loading="eager"
+												decoding="async"
+											/>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<!-- Dots -->
+						<div
+							class="absolute bottom-6 left-1/2 -translate-x-1/2 flex gap-3 z-20"
+							data-dots
+						></div>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -966,9 +1068,9 @@
 						>
 							News
 						</h3>
-						<p class="text-white/70 mt-2 max-w-2xl">
+						<!-- <p class="text-white/70 mt-2 max-w-2xl">
 							Press releases, business updates, and investor notes.
-						</p>
+						</p> -->
 					</div>
 					<!-- filtros -->
 					<div class="flex flex-wrap items-center gap-2">
@@ -1278,8 +1380,10 @@
 									>
 								</div>
 								<p class="text-white/70 text-sm mt-2">
-									Leads ColdFlex™/DryGrip+™ compound development, NVH
-									validation, and wear testing.
+									We are seeking an experienced Tire Sales Representative with
+									proven expertise in the U.S. tire industry to drive sales
+									growth by developing new accounts and strengthening the
+									distribution network with wholesalers and retailers.
 								</p>
 
 								<!-- Acordeón -->
@@ -1294,21 +1398,54 @@
 									</summary>
 									<div class="mt-3 text-white/70 text-sm space-y-2">
 										<p>
-											<strong>Requirements:</strong> 5+ years in
-											polymers/compounding; DOE; statistics; English B2.
+											<strong>Overview:</strong> We are seeking an experienced
+											and highly motivated Tire Sales Representative with proven
+											expertise in the U.S. tire industry. The ideal candidate
+											will be responsible for driving sales growth by developing
+											new accounts, expanding distribution networks, and
+											strengthening relationships with wholesalers, regional
+											distributors, and tire retail shops.
 										</p>
 										<p>
-											<strong>Plus:</strong> Experience in NVH, ISO 28580, track
-											testing.
+											<strong>Key Responsabilities:</strong> 
+											<ul>
+												<li>•   Identify, approach, and secure new business with tire distributors, wholesalers, and retail stores across the U.S.</li>
+												<li>•	Develop and maintain strong, long-term relationships with existing customers.</li>
+												<li>•	Achieve and exceed sales targets through strategic account management and market development.</li>
+												<li>•	Conduct regular market research to identify trends, competitor activity, and customer needs.</li>
+												<li>•	Provide product knowledge, technical support, and training to clients as needed.</li>
+												<li>•	Represent the company at trade shows, industry events, and client meetings.</li>
+											</ul>
 										</p>
-										<div class="flex gap-2 flex-wrap">
-											<span class="chip" data-static>New</span
-											><span class="chip" data-static>Senior</span>
-										</div>
+										<p>
+											<strong>Qualifications:</strong>
+											<ul>
+												<li>•	Sales experience in the U.S. market.</li>
+												<li>•	Strong existing network with tire distributors, wholesalers, and retail outlets.</li>
+												<li>•	Deep understanding of the U.S. tire industry, including PCR, LTR, TBR, and specialty tires.</li>
+												<li>•	Excellent negotiation, communication, and relationship-building skills.</li>
+												<li>•	Self-motivated, results-driven, and able to work independently with minimal supervision.</li>
+												<li>•	Willingness to travel frequently within the U.S. to meet customers and develop markets.</li>
+											</ul>
+										</p>
+										<p>
+											<strong>What we offer:</strong>
+											<ul>
+												<li>•	Competitive base salary plus commission.</li>
+												<li>•	Performance-based incentives..</li>
+												<li>•	Opportunities for career growth in a rapidly expanding company.</li>
+												<li>•	Supportive and collaborative work environment.</li>
+											</ul>
+										</p>
+										<p>
+											<strong>How to Apply:</strong>
+											Interested candidates should send their resume and a brief cover letter highlighting relevant tire sales experience to <strong><a href="mailto:1375187565@qq.com">1375187565@qq.com</a> </strong>with the subject line: “Application – Tire Sales Representative”.
+										</p>
+										
 									</div>
 								</details>
 
-								<div class="mt-4 flex items-center gap-3">
+								<!-- <div class="mt-4 flex items-center gap-3">
 									<button
 										class="applyBtn inline-flex items-center gap-2 px-4 py-2 rounded-md font-semibold text-black"
 										data-job="Sr. Tire Compound Engineer"
@@ -1324,7 +1461,7 @@
 									>
 										<i class="fa-regular fa-bookmark"></i> Save
 									</button>
-								</div>
+								</div> -->
 							</article>
 
 							<article
