Update tire sales representative job description for clarity and consistency; change "Todas" to "All" in dropdown

--- a/index.html
+++ b/index.html
@@ -1299,7 +1299,7 @@
 										id="fDept"
 										class="mt-1 w-full bg-white/95 text-neutral-800 rounded-md px-3 py-2"
 									>
-										<option value="">Todas</option>
+										<option value="">All</option>
 										<option value="engineering">Engineering</option>
 										<option value="product">Product</option>
 										<option value="operations">Operations</option>
@@ -1407,41 +1407,85 @@
 											distributors, and tire retail shops.
 										</p>
 										<p>
-											<strong>Key Responsabilities:</strong> 
-											<ul>
-												<li>•   Identify, approach, and secure new business with tire distributors, wholesalers, and retail stores across the U.S.</li>
-												<li>•	Develop and maintain strong, long-term relationships with existing customers.</li>
-												<li>•	Achieve and exceed sales targets through strategic account management and market development.</li>
-												<li>•	Conduct regular market research to identify trends, competitor activity, and customer needs.</li>
-												<li>•	Provide product knowledge, technical support, and training to clients as needed.</li>
-												<li>•	Represent the company at trade shows, industry events, and client meetings.</li>
-											</ul>
+											<strong>Key Responsabilities:</strong>
 										</p>
+										<ul>
+											<li>
+												• Identify, approach, and secure new business with tire
+												distributors, wholesalers, and retail stores across the
+												U.S.
+											</li>
+											<li>
+												• Develop and maintain strong, long-term relationships
+												with existing customers.
+											</li>
+											<li>
+												• Achieve and exceed sales targets through strategic
+												account management and market development.
+											</li>
+											<li>
+												• Conduct regular market research to identify trends,
+												competitor activity, and customer needs.
+											</li>
+											<li>
+												• Provide product knowledge, technical support, and
+												training to clients as needed.
+											</li>
+											<li>
+												• Represent the company at trade shows, industry events,
+												and client meetings.
+											</li>
+										</ul>
 										<p>
 											<strong>Qualifications:</strong>
-											<ul>
-												<li>•	Sales experience in the U.S. market.</li>
-												<li>•	Strong existing network with tire distributors, wholesalers, and retail outlets.</li>
-												<li>•	Deep understanding of the U.S. tire industry, including PCR, LTR, TBR, and specialty tires.</li>
-												<li>•	Excellent negotiation, communication, and relationship-building skills.</li>
-												<li>•	Self-motivated, results-driven, and able to work independently with minimal supervision.</li>
-												<li>•	Willingness to travel frequently within the U.S. to meet customers and develop markets.</li>
-											</ul>
 										</p>
+										<ul>
+											<li>• Sales experience in the U.S. market.</li>
+											<li>
+												• Strong existing network with tire distributors,
+												wholesalers, and retail outlets.
+											</li>
+											<li>
+												• Deep understanding of the U.S. tire industry,
+												including PCR, LTR, TBR, and specialty tires.
+											</li>
+											<li>
+												• Excellent negotiation, communication, and
+												relationship-building skills.
+											</li>
+											<li>
+												• Self-motivated, results-driven, and able to work
+												independently with minimal supervision.
+											</li>
+											<li>
+												• Willingness to travel frequently within the U.S. to
+												meet customers and develop markets.
+											</li>
+										</ul>
 										<p>
 											<strong>What we offer:</strong>
-											<ul>
-												<li>•	Competitive base salary plus commission.</li>
-												<li>•	Performance-based incentives..</li>
-												<li>•	Opportunities for career growth in a rapidly expanding company.</li>
-												<li>•	Supportive and collaborative work environment.</li>
-											</ul>
 										</p>
+										<ul>
+											<li>• Competitive base salary plus commission.</li>
+											<li>• Performance-based incentives..</li>
+											<li>
+												• Opportunities for career growth in a rapidly expanding
+												company.
+											</li>
+											<li>• Supportive and collaborative work environment.</li>
+										</ul>
 										<p>
 											<strong>How to Apply:</strong>
-											Interested candidates should send their resume and a brief cover letter highlighting relevant tire sales experience to <strong><a href="mailto:1375187565@qq.com">1375187565@qq.com</a> </strong>with the subject line: “Application – Tire Sales Representative”.
+											Interested candidates should send their resume and a brief
+											cover letter highlighting relevant tire sales experience
+											to
+											<strong
+												><a href="mailto:1375187565@qq.com"
+													>1375187565@qq.com</a
+												> </strong
+											>with the subject line: “Application – Tire Sales
+											Representative”.
 										</p>
-										
 									</div>
 								</details>
 
@@ -1474,17 +1518,28 @@
 								<div class="flex flex-wrap items-center gap-3">
 									<span
 										class="text-xs px-2 py-1 rounded bg-white/10 border border-white/10 text-white/70"
-										>Product</span
+										>Marketing</span
 									>
 									<h5 class="text-white font-bold text-lg">
-										Product Manager — All-Weather
+										Marketing Manager (U.S. Market)
 									</h5>
 									<span class="ml-auto text-[var(--accent)] text-sm"
-										><i class="fa-solid fa-location-dot"></i> Houston, US</span
+										><i class="fa-solid fa-location-dot"></i> Headquarters in
+										China (with overseas business trips/remote collaboration as
+										needed)</span
 									>
 								</div>
 								<p class="text-white/70 text-sm mt-2">
-									Owner of All-Weather Roadmap, Pricing, and GTM for MX & USA.
+									A highly strategic and results-driven Brand Manager/Marketing
+									Leader specializing in the U.S. market. Expertise in applying
+									Positioning Theory to define brand strategy, drive market
+									share, and lead integrated marketing communication (IMC)
+									programs. Proven ability to conduct in-depth competitor
+									analysis, manage multi-channel promotional campaigns (digital,
+									trade shows, social media), and collaborate cross-functionally
+									to ensure consistent brand alignment across all product and
+									sales touchpoints while optimizing ROI and channel
+									development.
 								</p>
 								<details class="mt-3 group">
 									<summary
@@ -1497,19 +1552,82 @@
 									</summary>
 									<div class="mt-3 text-white/70 text-sm space-y-2">
 										<p>
-											<strong>Requirements:</strong> 3–5 years in product
-											management; market analysis; storytelling skills.
+											<strong>Key Responsabilities:</strong>
 										</p>
+										<ul>
+											<li>1. Brand Strategy & Positioning</li>
+											<li>2. Marketing & Promotion</li>
+											<li>3. Market Operations & Channel Development</li>
+											<li>4. Brand Alignment & Execution</li>
+											<li>5. Research & Analysis</li>
+										</ul>
 										<p>
-											<strong>Plus:</strong> Automotive/tire experience; Basic
-											SQL.
+											<strong>Qualifications:</strong>
 										</p>
-										<div class="flex gap-2 flex-wrap">
-											<span class="chip" data-static>New</span>
-										</div>
+										<ul>
+											<li>
+												• Bachelor’s degree or above in Marketing, International
+												Business, Brand Management, or related fields.
+											</li>
+											<li>
+												• 3+ years of proven experience in U.S. market brand
+												promotion or marketing operations, with strong
+												understanding of Positioning Theory.
+											</li>
+											<li>
+												• Solid background in market research, data-driven
+												analysis, and execution of marketing strategies.
+											</li>
+											<li>
+												• Familiarity with U.S. marketing channels (Google Ads,
+												Meta Ads, industry publications, trade shows,
+												distributor collaborations).
+											</li>
+											<li>
+												• Excellent communication and cross-cultural
+												collaboration skills; proficiency in English as a
+												working language.
+											</li>
+											<li>
+												• Prior experience in the automotive, tire, industrial
+												products, or durable goods industries is a strong plus.
+											</li>
+										</ul>
+										<p>
+											<strong>What we offer:</strong>
+										</p>
+										<ul>
+											<li>
+												• Competitive salary and performance-based bonus..
+											</li>
+											<li>
+												• Structured training and career development
+												opportunities.
+											</li>
+											<li>
+												• International working exposure, with direct
+												involvement in U.S. market brand growth.
+											</li>
+											<li>
+												• Room to advance and gain hands-on experience in global
+												market operations.
+											</li>
+										</ul>
+										<p>
+											<strong>How to Apply:</strong>
+											Interested candidates should send their resume and a brief
+											cover letter highlighting relevant tire sales experience
+											to
+											<strong
+												><a href="mailto:1375187565@qq.com"
+													>1375187565@qq.com</a
+												> </strong
+											>with the subject line: “Application – Tire Sales
+											Representative”.
+										</p>
 									</div>
 								</details>
-								<div class="mt-4 flex items-center gap-3">
+								<!-- <div class="mt-4 flex items-center gap-3">
 									<button
 										class="applyBtn inline-flex items-center gap-2 px-4 py-2 rounded-md font-semibold text-black"
 										data-job="Product Manager — All-Weather"
@@ -1525,66 +1643,7 @@
 									>
 										<i class="fa-regular fa-bookmark"></i> Save
 									</button>
-								</div>
-							</article>
-
-							<article
-								class="rec-card"
-								data-dept="operations"
-								data-loc="mx"
-								data-type="contract"
-								data-tags=""
-							>
-								<div class="flex flex-wrap items-center gap-3">
-									<span
-										class="text-xs px-2 py-1 rounded bg-white/10 border border-white/10 text-white/70"
-										>Operations</span
-									>
-									<h5 class="text-white font-bold text-lg">
-										Quality Technician (Contract)
-									</h5>
-									<span class="ml-auto text-[var(--accent)] text-sm"
-										><i class="fa-solid fa-location-dot"></i> Guadalajara,
-										MX</span
-									>
-								</div>
-								<p class="text-white/70 text-sm mt-2">
-									ISO 9001 inspection, testing and documentation in the plant.
-								</p>
-								<details class="mt-3 group">
-									<summary
-										class="cursor-pointer text-white/80 hover:text-white flex items-center gap-2 select-none"
-									>
-										<i
-											class="fa-solid fa-angle-down transition group-open:rotate-180"
-										></i>
-										Details & requirements
-									</summary>
-									<div class="mt-3 text-white/70 text-sm space-y-2">
-										<p>
-											<strong>Requirements:</strong> 2+ years QA/QC; instrument
-											handling; 5S; reporting.
-										</p>
-										<p><strong>Plus:</strong> ISO internal auditor.</p>
-									</div>
-								</details>
-								<div class="mt-4 flex items-center gap-3">
-									<button
-										class="applyBtn inline-flex items-center gap-2 px-4 py-2 rounded-md font-semibold text-black"
-										data-job="Quality Technician (Contract)"
-										style="
-											background: var(--accent);
-											box-shadow: 0 4px 0 rgba(0, 0, 0, 0.25);
-										"
-									>
-										Apply
-									</button>
-									<button
-										class="inline-flex items-center gap-2 px-3 py-2 rounded-md bg-white/10 text-white hover:bg-white/15 border border-white/10"
-									>
-										<i class="fa-regular fa-bookmark"></i> Save
-									</button>
-								</div>
+								</div> -->
 							</article>
 						</div>
 					</div>
@@ -1617,7 +1676,7 @@
 					</div>
 				</div>
 
-				<!-- CTA final -->
+				<!-- CTA final
 				<div class="mt-8 text-center">
 					<a
 						href="#jobsList"
@@ -1633,7 +1692,7 @@
 							>➜</span
 						>
 					</a>
-				</div>
+				</div> -->
 			</div>
 
 			<!-- Modal Apply -->
