Update sales volume counter and improve text clarity in various sections

--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
 					</div>
 					<div class="wl-card text-center">
 						<div class="text-3xl md:text-4xl font-black text-white">
-							<span class="counter" data-target="98">0</span>%
+							+<span class="counter" data-target="15300">0</span>
 						</div>
 						<p class="text-xs text-white/70 mt-1">Sales Volume</p>
 					</div>
@@ -778,8 +778,7 @@
 							Featured Tire Lineup
 						</h3>
 						<p class="text-white/70 mt-2 max-w-2xl">
-							Our flagship models for passenger, light truck/SUV, and mud
-							terrain.
+							Our flagship models for passenger and light truck/SUV.
 						</p>
 					</div>
 				</div>
@@ -1843,8 +1842,8 @@
 						Our History
 					</h3>
 					<p class="text-white/70 mt-2 max-w-2xl mx-auto">
-						Décadas de ingeniería, innovación en compuestos y compromiso con la
-						seguridad.
+						Decades of engineering, composite innovation and commitment to
+						safety.
 					</p>
 				</div>
 
@@ -1984,7 +1983,7 @@
 								alt="Landscape"
 								class="h-8 w-auto"
 							/>
-							<span class="f-chip">Since 2025</span>
+							<span class="f-chip">Since 1998</span>
 						</div>
 						<p class="text-white/70 text-sm mt-3 max-w-md">
 							Engineering, safety, and performance for every mile. MX & USA with
