--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
 								</select>
 							</label>
 
-							<label class="text-xs text-white/70 md:col-span-3"
+							<!-- <label class="text-xs text-white/70 md:col-span-3"
 								>Application
 								<select
 									class="mt-1 w-full bg-white/95 text-neutral-800 rounded-md px-3 py-2"
@@ -817,7 +817,7 @@
 									<option>Summer</option>
 									<option>Winter</option>
 								</select>
-							</label>
+							</label> -->
 
 							<div class="md:col-span-6 flex items-center gap-4">
 								<!-- <label
@@ -883,7 +883,7 @@
 						<div class="grid md:grid-cols-2 gap-8">
 							<!-- TILE 1: Encuentre su distribuidor -->
 							<a
-								href="#find-dealer"
+								href="pages/sizes.html?segment=passenger"
 								class="group relative rounded-xl overflow-hidden shadow-[0_12px_40px_rgba(0,0,0,.25)] border border-black/20"
 							>
 								<!-- imagen -->
@@ -914,7 +914,7 @@
 
 							<!-- TILE 2: Catálogo 2025 -->
 							<a
-								href="#find-dealer"
+								href="pages/sizes.html?segment=commercial"
 								class="group relative rounded-xl overflow-hidden shadow-[0_12px_40px_rgba(0,0,0,.25)] border border-black/20"
 							>
 								<!-- imagen -->
@@ -946,195 +946,6 @@
 						</div>
 					</div>
 				</section>
-			</div>
-		</section>
-
-		<!-- ======= TIRE MODELS (3-UP) ======= -->
-		<section class="max-w-7xl mx-auto px-6 md:px-8 py-10">
-			<div class="grid md:grid-cols-3 gap-y-14 md:gap-x-10 lg:gap-x-16">
-				<!-- ========== MODEL 1 ========== -->
-				<figure class="relative">
-					<!-- Tire image -->
-					<div class="relative mx-auto aspect-[3/4] w-[320px] md:w-[360px]">
-						<img
-							src="assets/img/gallery/catalog/longHaul/ls11.png"
-							alt="Atrezzo 4S"
-							class="absolute inset-0 w-full h-full object-contain drop-shadow-2xl"
-							draggable="false"
-						/>
-					</div>
-					<!-- Copy debajo (figcaption) -->
-					<figcaption class="mt-6">
-						<!-- Marca pequeña -->
-						<div
-							class="text-[#820099] font-extrabold tracking-wider uppercase text-sm"
-						>
-							Atrezzo
-						</div>
-						<!-- Modelo grande -->
-						<div
-							class="text-[#820099] font-black leading-none uppercase text-4xl md:text-5xl mt-1"
-						>
-							4S
-						</div>
-						<!-- Subtítulo en inglés (gris) -->
-						<div class="uppercase tracking-wide text-sm text-neutral-500 mt-2">
-							All-Weather Tire
-						</div>
-
-						<!-- Badges fila -->
-						<div class="flex items-center gap-3 mt-3">
-							<img src="assets/badges/60k.png" class="h-10 w-auto" alt="60K" />
-							<img
-								src="assets/badges/mountain.png"
-								class="h-10 w-auto"
-								alt="All-weather"
-							/>
-							<img
-								src="assets/badges/quiet.png"
-								class="h-10 w-auto"
-								alt="Quiet"
-							/>
-						</div>
-
-						<!-- Título en negrita + descripción -->
-						<p class="mt-4 font-extrabold text-[15px]">
-							CUATRO ESTACIONES. UN NEUMÁTICO.
-						</p>
-						<p class="text-[15px] leading-6 text-neutral-800/90 max-w-[40ch]">
-							Presentamos el neumático Sailun Atrezzo 4S que está diseñado para
-							transportarlo con confianza a…
-						</p>
-
-						<!-- Botón -->
-						<a
-							href="#"
-							class="mt-6 inline-flex items-center justify-center gap-2 px-8 py-3 rounded-full border border-[#1b1f2a] text-[#1b1f2a] font-semibold tracking-wide hover:bg-black/5 transition"
-						>
-							APRENDE MÁS
-						</a>
-					</figcaption>
-				</figure>
-
-				<!-- ========== MODEL 2 ========== -->
-				<figure class="relative">
-					<div class="relative mx-auto aspect-[3/4] w-[320px] md:w-[360px]">
-						<img
-							src="assets/img/gallery/catalog/regional/ra61.png"
-							alt="Atrezzo 4S"
-							class="absolute inset-0 w-full h-full object-contain drop-shadow-2xl"
-							draggable="false"
-						/>
-					</div>
-
-					<figcaption class="mt-6">
-						<div
-							class="text-[#820099] font-extrabold tracking-wider uppercase text-sm"
-						>
-							Atrezzo
-						</div>
-						<div
-							class="text-[#820099] font-black leading-none uppercase text-4xl md:text-5xl mt-1"
-						>
-							TCON
-						</div>
-						<div class="uppercase tracking-wide text-sm text-neutral-500 mt-2">
-							Neumático para SUV para todas las temporadas
-						</div>
-
-						<div class="flex items-center gap-3 mt-3">
-							<img
-								src="assets/badges/parent.png"
-								class="h-10 w-auto"
-								alt="Parent Approved"
-							/>
-							<img src="assets/badges/65k.png" class="h-10 w-auto" alt="65K" />
-							<img
-								src="assets/badges/quiet.png"
-								class="h-10 w-auto"
-								alt="Quiet"
-							/>
-						</div>
-
-						<p class="mt-4 font-extrabold text-[15px]">
-							EL CONTROL TOTAL PARA TU SUV/CUV.
-						</p>
-						<p class="text-[15px] leading-6 text-neutral-800/90 max-w-[40ch]">
-							El ATREZZO TCON es un neumático para SUV/CUV premium para todas
-							las estaciones…
-						</p>
-
-						<a
-							href="#"
-							class="mt-6 inline-flex items-center justify-center gap-2 px-8 py-3 rounded-full border border-[#1b1f2a] text-[#1b1f2a] font-semibold tracking-wide hover:bg-black/5 transition"
-						>
-							APRENDE MÁS
-						</a>
-					</figcaption>
-				</figure>
-
-				<!-- ========== MODEL 3 ========== -->
-				<figure class="relative">
-					<div class="relative mx-auto aspect-[3/4] w-[320px] md:w-[360px]">
-						<img
-							src="assets/img/gallery/catalog/winter/am83.png"
-							alt="Atrezzo 4S"
-							class="absolute inset-0 w-full h-full object-contain drop-shadow-2xl"
-							draggable="false"
-						/>
-					</div>
-
-					<figcaption class="mt-6">
-						<div
-							class="text-[#820099] font-extrabold tracking-wider uppercase text-sm"
-						>
-							Terramax
-						</div>
-						<div
-							class="text-[#820099] font-black leading-none uppercase text-4xl md:text-5xl mt-1"
-						>
-							AT2
-						</div>
-						<div class="uppercase tracking-wide text-sm text-neutral-500 mt-2">
-							Neumático para el camino/todoterreno para camioneta ligera y
-							vehículo utilitario deportivo
-						</div>
-
-						<div class="flex items-center gap-3 mt-3">
-							<img
-								src="assets/badges/parent.png"
-								class="h-10 w-auto"
-								alt="Parent Approved"
-							/>
-							<img src="assets/badges/50k.png" class="h-10 w-auto" alt="50K" />
-							<img
-								src="assets/badges/snowflake.png"
-								class="h-10 w-auto"
-								alt="Severe Snow"
-							/>
-							<img
-								src="assets/badges/quiet.png"
-								class="h-10 w-auto"
-								alt="Quiet"
-							/>
-						</div>
-
-						<p class="mt-4 font-extrabold text-[15px]">
-							TRACCIÓN DENTRO Y FUERA DEL CAMINO.
-						</p>
-						<p class="text-[15px] leading-6 text-neutral-800/90 max-w-[40ch]">
-							Terramax AT2 eleva su experiencia de conducción con tracción
-							superior dentro y fuera del camino…
-						</p>
-
-						<a
-							href="#"
-							class="mt-6 inline-flex items-center justify-center gap-2 px-8 py-3 rounded-full border border-[#1b1f2a] text-[#1b1f2a] font-semibold tracking-wide hover:bg-black/5 transition"
-						>
-							APRENDE MÁS
-						</a>
-					</figcaption>
-				</figure>
 			</div>
 		</section>
 
